fix locale-specific links in section-choice

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -610,8 +610,8 @@ ar:
         gap: "..."
         next: "لاحقا"
       sort:
-        nearby: 
-        relevance: 
+        nearby: "بالقرب"
+        relevance: "أفضل النتائج"
     search_results:
       bridge: "من أجل"
       enclosing: "تم العثور على"
@@ -779,7 +779,7 @@ ar:
           سوف نخبرك بكل سرور بمجرد أن يكون في كلارات مساعدات بالقرب منك
           لذلك سجل عنوان بريدك الإليكتروني هنا
       nav_lang:
-        german_content_warning: 
+        german_content_warning: "إختر لغتك"
         languages:
           ar: "عربي"
           de: Deutsch
@@ -870,7 +870,7 @@ ar:
     show:
       last_update: "آخر إدخال"
       next_steps:
-        code_word: "ما هو سؤالك أو عن ماذا تبحث في الموقع؟"
+        code_word: "هكذا تسمى المساعدة لدى مقدم الدعم."
         heading: "ماذا يجب عليك أن تفعل؟"
       opening_section:
         days:
@@ -884,7 +884,7 @@ ar:
         heading: "متى يمكنك فعل هذا؟"
       speaking: "في أي لغة تقدم لك المساعدة؟"
       website_section:
-        internet_presence: "أين تجد المزيد من المعلومات في النت"
+        internet_presence: "أين تجد المزيد من المعلومات في النت؟"
         websites:
           application_form: "إستمارة التسجيل"
           chat: "الدردشة"
@@ -900,9 +900,9 @@ ar:
           twitter: "تويتر"
           youtube: "اليوتيوب"
       what:
-        code_word: "ما هو سؤالك أو عن ماذا تبحث في الموقع؟ "
+        code_word: "هكذا تسمى المساعدة لدى مقدم الدعم."
         heading: "ما هو الموضوع؟"
-      who: "أين توجد المساعدة؟"
+      who: "أين يمكنك أن تحصل على هذه المساعدة؟"
       who_contact_people:
         dr: ".د"
         email: "البريد الإليكتروني:"
@@ -935,9 +935,9 @@ ar:
   pages:
     about:
       amina: "أخصائية إجتماعية. هذا يعني أنها تعرف الكثير عن المجتمع. فهي تلاحظ بسرعة ما هو مهم. في كلارات هي تعمل مع فريق البحث وتقرر أي العروض يصلح ليكون ضمن عروض كلارات. أعنيتها المفضلة هي لابريما ايستيت ل. إيرلند أوي."
-      andrea: "درست إدارة متعددة الثقافات. هذه يعني أنها تعرف عن الإقتصاد والثقافة. هي تعمل بدقة شديدة. في كلارات هي عضوة بالفريق البحثي وتتأكد من جودة العمل هنا. أعنيتها المفضلة هي ورك مي ل. بلاك كيس."
-      anja: 
-      anna: 
+      andrea: "درست إدارة متعددة الثقافات. هذه يعني أنها تعرف عن الإقتصاد والثقافة. هي تعمل بدقة شديدة. في كلارات هي عضوة بالفريق البحثي وهي تعتني بالشكل العام لكلارات فاميلي. أعنيتها المفضلة هي ورك مي ل. بلاك كيس."
+      anja: "هي خبيرة إقتصادية ومهندسة. إنها قادرة على التفكير المنطقي السريع. في كلارات هي عضوة بالفريق البحثي. وهي تتأكد من جودة العمل. أغنيتها المفضلة هي وير إز ماي ميند لفرقة بكسييز"
+      anna: "هي متخصصة في علم اللغة. هذا يعني أنها تعرف الكثير عن اللغات المختلفة. وهي على معرفة جيدة بالآداب. يمكنها فهم الأشياء المعقدة جيداً. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي ١٠٠٩ لبونبون "
       anne: "درست إقتصاد وعلاقات عامة. هي سريعة جدا في التفكير المنطقي. في كلارات هي المديرة. وهي تتابع عمل الفريق بأكمله وتقوم بتنظيم كل شئ. أعنيتها المفضلة هي دنكين زي جروس ل. دايشكند."
       astrid: "خبيرة سياسية. هذا يعني أنها تعرف الكثير عن السياسة والمجتمع.  هي دائما مرحة وتعكس هذا على الآخرين. هي عضوة في فريق البحث لدى كلارات. أعنيتها المفضلة هي يو جوت مي ل. زاروتس فييت. إريكا بادو."
       basti: "مطور ويب. هذا يعني أنه على معرفة جيدة ببرمجة مواقع وصفحات الإنترنت. في كلارات هو مدير الآي تي أو تكنولوجيا المعلومات. فهو يساعدنا في المشاكل التقنية, كما يقوم بأعمال أخري تتعلق بالإجازات وعقود العمل. أغنيته المفضلة هي مان ان زا ميرور ل. مايكل جاكسون."
@@ -950,7 +950,7 @@ ar:
       esther: 
       franziska: "خبيرة في القانون الدولي. هذا يعني أنها على دراية جيدة بالقوانين التي تطبق على كل الدول. هي قادرة على فهم الأمور المعقدة جيدا وإيجاد حلول سريعة. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي اكسبلانيشنس ل. سيلاه سوي"
       heading: "من وراء كلارات؟"
-      jacinta: 
+      jacinta: "درست اللغة الألمانية والفرنسية. لغتها الأم هي الإنجليزية. يمكنها الكتابة بشكل جيد وبلغة سهلة. في كلارات هي عضوة في فريق الترجمة وتقوم بترجمة كلارات إلى اللغة الإنجليزية. أغنيتها المفضلة هي وانبي لسبيس جيرل"
       jakob: 
       janina: "خبيرة في الإنتروبولوجيا الثقافية هذا يعني أنها تعرف الكتير عن الإنسان والثقافات. هي تكتب بشكل جيد. في كلارات هي عضوة في فريق البحث وخبيرة في لغة كلارات الخاصة كما تساعد المستخدمين. أعنيتها المفضلة هي ام اف جي ل. فانتا فور"
       janne: "ياننا درست سياسة وعلاقات دولية. يمكنها تنظيم وقتها بشكل جيد. في كلارات هي عضوة في فريق البحث وهي تقرر أي العروض يصلح ان يكون من ضمن عروض كلارات. أعنيتها المفضلة هي سويت ل. راي إكس."
