--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -674,7 +674,7 @@ en:
         gap: "…"
         next: Next
       sort:
-        nearby: 
+        nearby: nearby
         relevance: 
     search_results:
       bridge: for the search term
@@ -927,7 +927,7 @@ en:
     show:
       last_update: Entry last modified on
       next_steps:
-        code_word: What do you have to ask for or look for on the website?
+        code_word: 'This is what the service provider calls this support service:'
         heading: What do you have to do?
       opening_section:
         days:
@@ -957,9 +957,9 @@ en:
           twitter: Twitter
           youtube: Youtube
       what:
-        code_word: What do you have to ask for or look for on the website?
+        code_word: 'This is what the service provider calls this support service:'
         heading: What is this about?
-      who: Who offers this help?
+      who: Where can you get this help?
       who_contact_people:
         dr: Dr.
         email: 'Email: '
@@ -1319,7 +1319,7 @@ en:
     definitions: definitions
     emails: emails
     faq: frequently-asked-questions
-    fr: 
+    fr: fr
     haeufige-fragen: frequently-asked-questions
     home: 
     impressum: impressum
