add eol newline

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -950,8 +950,8 @@ ar:
       esther: 
       franziska: "خبيرة في القانون الدولي. هذا يعني أنها على دراية جيدة بالقوانين التي تطبق على كل الدول. هي قادرة على فهم الأمور المعقدة جيدا وإيجاد حلول سريعة. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي اكسبلانيشنس ل. سيلاه سوي"
       heading: "من وراء كلارات؟"
-      jacinta: "درست اللغة الألمانية والفرنسية. لغتها الأم هي الإنجليزية. يمكنها الكتابة بشكل جيد وبلغة سهلة. في كلارات هي عضوة في فريق الترجمة وتقوم بترجمة كلارات إلى اللغة الإنجليزية. أغنيتها المفضلة هي وانبي لسبيس جيرل"
-      jakob: 
+      jacinta: "درست اللغة الألمانية والفرنسية. لغتها الأم هي الإنجليزية. يمكنها الكتابة بشكل جيد وبلغة سهلة. في كلارات هي عضوة في فريق الترجمة وتقوم بترجمة كلارات إلى اللغة الإنجليزية. أغنيتها المفضلة هي وانبي لسبيس جيرل."
+      jakob: "هو متخصص في العلوم الأسيوية والأفريقية. هذا يعني أنه يعرف الكثير عن هذه القارات. هو هادئ الطباع حتى إذا كان تحت ضغط. في كلارات هو عضو في الفريق البحثي. ويقوم بالبحث في الإنترنت عن منظمات. أغنيته المفضلة هي سيمبليسيتي."
       janina: "خبيرة في الإنتروبولوجيا الثقافية هذا يعني أنها تعرف الكتير عن الإنسان والثقافات. هي تكتب بشكل جيد. في كلارات هي عضوة في فريق البحث وخبيرة في لغة كلارات الخاصة كما تساعد المستخدمين. أعنيتها المفضلة هي ام اف جي ل. فانتا فور"
       janne: "ياننا درست سياسة وعلاقات دولية. يمكنها تنظيم وقتها بشكل جيد. في كلارات هي عضوة في فريق البحث وهي تقرر أي العروض يصلح ان يكون من ضمن عروض كلارات. أعنيتها المفضلة هي سويت ل. راي إكس."
       jenny: 'Ist Sozialanthropologin. Das heißt, sie weiß viel über Menschen und Kulturen. Sie findet immer eine Lösung. Bei clarat ist sie im Research-Team. Und sie sorgt für Ordnung auf unserer Internetseite. Ihr Lieblingssong ist I sing I swim von Seabear. '
