--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -858,7 +858,7 @@ fa:
         beta_modal:
           link: "برای ما پیغام بنویسید"
           text: "صفحه اینترنتی ما clarat.org جدید می باشد.در برلین می توانی پیشنهاد های کمکی زیادی را جستجو کنی.به زودی پیشنهاد های کمکی برای شهرهای دیگر را نیز جمع آوری می کنیم.از کمک شما استقبال می کنیم:آیا چیزی را دیدی که ما بهتر می توانیم آن را ارائه دهیم؟یا اینکه چیزی به درستی انجام نمی شود؟پس"
-        unavailable_location_modal: "در محل زندگی تو و حال حاضر در clarat فقط پیشنهادهای تلفنی یا آنلاین موجود می باشد.یعنی اینکه "
+        unavailable_location_modal: "در محل زندگی تو و حال حاضر در clarat فقط پیشنهادهای تلفنی یا آنلاین موجود می باشد.این بدین معنی است که به تو کمک تلفنی یا آنلاین می شود.بطور مثال از طریق ایمیل و یا در چت.به محض اینکه در در اینجا و در نزدیکی محل سکونت تو کمکی وجود داشت با کمال میل به تو اطلاع می دهیم.اطفا آدرس ایمیل خود را وارد کنید."
       nav_lang:
         german_content_warning: "زبان خود را انتخاب کن"
         languages:
@@ -871,11 +871,11 @@ fa:
           tr: "ترکی"
         title: "زبان خود را انتخاب کنید"
       navigation:
-        category_headline: "یا بدنبال طبقه های "
+        category_headline: "یا بدنبال طبقه بندی ها"
         claim:
           family: "پیشنهاد های حمایتی برای کودکان٬جوانان و خانواده ها "
           main: "به راحتی کمک یافتن"
-          refugees: "پیشنهاد های حمایتی برای پناهندگان"
+          refugees: "پیشنهادهای حمایتی برای پناهندگان"
       top_bar:
         languages:
           ar: 
