--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -800,6 +800,7 @@ ar:
           pl: 
           ru: 
           tr: 
+        title: 
   offers:
     index:
       filters:
@@ -932,12 +933,12 @@ ar:
       andrea: "درست إدارة متعددة الثقافات. هذه يعني أنها تعرف عن الإقتصاد والثقافة. هي تعمل بدقة شديدة. في كلارات هي عضوة بالفريق البحثي وتتأكد من جودة العمل هنا. أعنيتها المفضلة هي ورك مي ل. بلاك كيس."
       anja: 
       anna: 
-      anne: "درست إقتصاد وعلاقات عامة. هي سريعة جدا في التفكير المنطقي. في كلارات هي المديرة. وهي تتابع عمل الفريق بأكمله وتقوم بتنظيم كل شئ. أعنيتها المفضلة هي دنكين زي جروس ل. دايشكند."
-      astrid: "خبيرة سياسية. هذا يعني أنها تعرف الكثير عن السياسة والمجتمع.  هي دائما مرحة وتعكس هذا على الآخرين. هي عضوة في فريق البحث لدى كلارات. أعنيتها المفضلة هي يو جوت مي ل. زاروتس فييت. إريكا بادو."
+      anne: "درست إقتصاد وعلاقات عامة. هي سريعة جدا في التفكير المنطقي. في كلارات هي المديرة. وهي تتابع عمل الفريق بأكمله وتقوم بتنظيم كل شئ. أغنيتها المفضلة هي دنكين زي جروس لدايشكند."
+      astrid: "خبيرة سياسية. هذا يعني أنها تعرف الكثير عن السياسة والمجتمع.  هي دائما مرحة وتعكس هذا على الآخرين. هي عضوة في فريق البحث لدى كلارات. أغنيتها المفضلة هي يو جوت مي ل. زاروتس فييت. إريكا بادو."
       basti: "مطور ويب. هذا يعني أنه على معرفة جيدة ببرمجة مواقع وصفحات الإنترنت. في كلارات هو مدير الآي تي أو تكنولوجيا المعلومات. فهو يساعدنا في المشاكل التقنية, كما يقوم بأعمال أخري تتعلق بالإجازات وعقود العمل. أغنيته المفضلة هي مان ان زا ميرور ل. مايكل جاكسون."
-      bettina: "بيتينا درست علوم الإدارة غير الربحية. هذه يعني أنها تعرف كيف يتم تنظيم مساعدات. هي بارعة في إنجاز العمل بشكل مرتب. في كلارات هي عضوة في الفريق البحثي؛ فهي تبحث في الإنترنت عن منظمات. أغنيتها المفضلة هي إلياس ل. ديسباتش"
-      birte: 
-      chrissy: 
+      bettina: "بيتينا درست علوم الإدارة غير الربحية. هذه يعني أنها تعرف كيف يتم تنظيم مساعدات. هي بارعة في إنجاز العمل بشكل مرتب. في كلارات هي عضوة في الفريق البحثي؛ فهي تبحث في الإنترنت عن منظمات. أغنيتها المفضلة هي إلياس ل. ديسباتش."
+      birte: "درست علوم تربوية. هي لديها خبرة مع الأطفال. يمكنها أن تتصور نفسها في موقف الآخرين. هي عملت أيضا بوسائل إعلام. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي بردرلاين لمادونا. "
+      chrissy: "هي متخصصة في العلوم السياسية. هذا يعني أنها تعرف الكثير عن السياسة والمجتمع. هي قادرة على التخطيط والتنظيم. في كلارات هي عضوة في الفريق البحثي. وهي تبحث في الإنترنت عن منظمات. أغنيتها المفضلة هي روف هاندي لألكسيسزأونفير."
       claudia: 
       eleonore: 
       elisa: "خبيرة ثقافية. هذا يعني أنها تعرف الكثير عن الثقافات. يمكنها شرح الأمور الصعبة. في كلارات هي عضوة في فريق البحث. هي تقوم أيضا بالعمل في معجم كلارات وتتواصل مع مستخدمي الصفحة. أعنيتها المفضلة هي بوت بيهيند ل. كنجس اوف كونفينينس"
@@ -947,34 +948,33 @@ ar:
       jacinta: 
       jakob: 
       janina: "خبيرة في الإنتروبولوجيا الثقافية هذا يعني أنها تعرف الكتير عن الإنسان والثقافات. هي تكتب بشكل جيد. في كلارات هي عضوة في فريق البحث وخبيرة في لغة كلارات الخاصة كما تساعد المستخدمين. أعنيتها المفضلة هي ام اف جي ل. فانتا فور"
-      janne: "ياننا درست سياسة وعلاقات دولية. يمكنها تنظيم وقتها بشكل جيد. في كلارات هي عضوة في فريق البحث وهي تقرر أي العروض يصلح ان يكون من ضمن عروض كلارات. أعنيتها المفضلة هي سويت ل. راي إكس."
-      jenny: 'Ist Sozialanthropologin. Das heißt, sie weiß viel über Menschen und Kulturen. Sie findet immer eine Lösung. Bei clarat ist sie im Research-Team. Und sie sorgt für Ordnung auf unserer Internetseite. Ihr Lieblingssong ist I sing I swim von Seabear. '
+      janne: "ياننا درست سياسة وعلاقات دولية. يمكنها تنظيم وقتها بشكل جيد. في كلارات هي عضوة في فريق البحث وهي تقرر أي العروض يصلح ان يكون من ضمن عروض كلارات. أغنيتها المفضلة هي سويت ل. راي إكس."
+      jenny: "هي متخصصة في العلوم الإنسانية الإجتماعية. هذا يعني أنها تعرف الكثير عن الناس والثقافات. هي تجد دائما حلولاً. في كلارات هي عضوة في الفريق البحثي. وهي تعتني بالنظام في صفحتنا على الإنترنت. أغنيتها المفضلة هي آي سنج آي سويم لسيبير."
       jens: "خبير تربوي. هذا يعني أنه على دراية بالتعليم. هو يفهم الأشياء المعقدة بسرعة. في كلارات هو عضو في فريق البحث ويقرر أي العروض يصلح لكلارات. أغنيته المفضلة هي تو بي تو ل. لامبشوب."
-      jule: "باحثة في دراسات السلام والصراعات. هذا يعني أنها على دراية بكثير من الصراعات والحروب. هي قادرة على إيجاد حلول. في كلارات هي عضوة في فريق البحث وتتأكد من جودة العمل. أعنيتها المفضلة هي هوم ل. إدوارد شارب."
+      jule: "باحثة في دراسات السلام والصراعات. هذا يعني أنها على دراية بكثير من الصراعات والحروب. هي قادرة على إيجاد حلول. في كلارات هي عضوة في فريق البحث وتتابع بشكل عام كلارات اللاجئين. أغنيتها المفضلة هي هوم لإدوارد شارب."
       julia: "خبيرة لغة ألمانية. هذا يعني أنها على دراية جيدة باللغة الألمانية وكتابة النصوص. يمكنها الكتابة بشكل جيد وكذلك تفسير الأمور بشكل بسيط. في كلارات هي عضوة في فريق البحث وخبيرة في لغة كلارات الخاصة. أعنيتها المفضلة هي ريكونر ل. راديوهيد. "
       julian: "خبير في الإقتصاد الإجتماعي. هذا يعني أنه يعرف الكثير عن الإقتصاد والمجتمع. هو على دراية جيدة أيضا بالكمبيوتر. في كلارات هو عضو في فريق البحث كما يقوم بأعمال تقنية أخرى. أغنيته المفضلة هي آول يو نيد ل. سابليما."
-      juliane: 
-      karo: 
-      katinka: |
-        أخصائية نفسية. هذا يعني أنها تستطيع أن تفهم السلوك والمشاعر الإنسانية جيدا. كما يمكنها ترتيب الأمور المعقدة. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي زا جريتست ل. كات بور.
-      katja: 
+      juliane: "درست إدارة أعمال وسياحة. هي قادرة على التخطيط الجيد. وهي تجد دائماً حلولاً مبدعة. في كلارات هي تقوم بالتسويق. أغنيتها المفضلة هي إيسي للكومودورس."
+      karo: "درست علوم أوروبية. هذا يعني أنها تعرف الكثير عن السياسة الأوروبية. هي قادرة على التنظيم الجيد. في كلارات هي عضوة في الفريق البحثي. وتقوم بعمل دليل كلارات. أغنيتها المفضلة هي أليف لبيرل جام."
+      katinka: "أخصائية نفسية. هذا يعني أنها تستطيع أن تفهم السلوك والمشاعر الإنسانية جيدا. في كلارات هي عضوة في الفريق البحثي. وهي تقوم بالبحث لكي تكتشف من يستخدم كلارات. أغنيتها المفضلة هي زا جريتست ل. كات بور."
+      katja: "درست علوم  وأدب اللغة الألمانية. تجيد الألمانية والنصوص الصعبة. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي ميستيريس لبيت جيبونس."
       konstantin: "مطور ويب. هذا يعني أنه يستطيع بشكل جيد أن يبرمج صفحات إنترنت. هو يجد دائما حلولا جيدة. في كلارات هو عضو في فريق الآي تي أو تكنولوجيا المعلومات ويقوم بعمل صفحات الإنترنت الخاصة بنا. أغنيته المفضلة هي توو لونج ل. دافت بونكت."
-      laura_i: 
-      laura_w: "درست دراسات جنوب آسيا وأبحاث التطورات الجغرافية. هذا يعني أنها على دراية جيدة بالدول النامية. لديها دائمة نظرة عامة للأمور. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي بينت ات بلاك ل.دينرولينج ستونس."
-      lavinia: "باحثة في دراسات السلام والصراعات. هذا يعني أنها تعرف الكثير عن الصراعات والحروب. يمكنها اقناع الآخرين بأفكار ما. في كلارات هي عضوة في فريق البحث وتقوم بترتيب العروض حسب الموضوع. أعنيتها المفضلة هي آيام نوت دون ل.فيفر راي."
-      line: "مخرجة مسرحية. وهي أيضا على دراية جيدة بالأدب واللغة. لذلك تعرف كيفية تأثير الكلمات على الناس. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي آني بودي سيين ماي بيبي ل. دينرولينج ستونس."
-      lisa: "مصممة إبتكارات. هذا يعني أنها يمكنها تخطيط مشروعات بشكل مبتكر. في كلارات هي عضوة في فريق البحث وتقوم بوضع خطط وتتواصل مع مستخدمي صفحة كلارات. أغنيتها المفضلة هي آنوزر داي ل. جيمي ليدل."
+      laura_i: "متخصصة في العلوم الثقافية والسفريات. قادرة على التنظيم الجيد. تعتني بالشكل العام ووتحب أن تتعلم أشياء جديدة. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي برود ماري لإكا وتينا "
+      laura_w: "درست أبحاث التطورات الجغرافية. هذا يعني أنها على دراية جيدة بالدول النامية. لديها دائمة نظرة عامة للأمور. في كلارات هي عضوة في فريق البحث وتعتني بمستخدمي الصفحة. أغنيتها المفضلة هي بينت ات بلاك ل.دينرولينج ستونس."
+      lavinia: "باحثة في دراسات السلام والصراعات. هذا يعني أنها تعرف الكثير عن الصراعات والحروب. يمكنها اقناع الآخرين بأفكار ما. في كلارات هي عضوة في فريق البحث وتقوم بترتيب العروض حسب الموضوع. أغنيتها المفضلة هي آيام نوت دون لفيفر راي."
+      line: "مخرجة مسرحية. وهي أيضا على دراية جيدة بالأدب واللغة. لذلك فهي تعرف كيفية تأثير الكلمات على الناس. في كلارات هي عضوة في فريق البحث وهي مختصة بلغة كلارات. أغنيتها المفضلة هي يونيتد لموسي."
+      lisa: "مصممة إبتكارات. هي تحب التطوير عن طريق حلول أخرى مبدعة. كما يمكنها الرسم جيداً. في كلارات هي عضوة في الفريق البحثي وتتواصل مع مستخدمي الصفحة. وتبحث لتكتشف من يستخدم كلارات. أغنيتها المفضلة هي ريزولوشن لمات."
       marcus: "مصمم ويب. هذا يعني أنه يستطيع برمجة صفحات الإنترنت والشكل العام للصفحة. هو أيضا واضع خطط جيد. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. ويعتني بجعل صفحات الإنترنت الخاصة بنا تبدو في شكل جيد. أغنيته المفضلة هي هيستيريا ل. موسي"
-      michaela: 
-      nahla: 
-      nathalie: 
+      michaela: "درست نظم معلومات اقتصادية. يمكنها أن تحمس الناس لشئ ما. وهي تعرف وسائل الإتصال الحديثة جيداً. في كلارات هي عضوة في الفريق البحثي. وتعتني بأن صفحتنا على الإنترنت تعمل بشكل جيد. أغنيتها المفضلة هي ديجيتال لوف لدافت بونك."
+      nahla: "متخصصة في علم الآثار. تعرف الكثير عن تاريخ البشر. يمكنها العمل جيداً وبسرعة. في كلارات هي عضوة بفريق الترجمة وتقوم بترجمة كلارات إلى اللغة العربية. أغنيتها المفضلة هي نسم علينا الهوى لفيروز. "
+      nathalie: "درست حقوق الإنسان وسياسة دولية. قادرة على شرح الأمور جيداً. وهي مستمعة جيدة. في كلارات هي عضوة بالفريق البحثي. أغنيتها المفضلة هي مي إن يو لكونفينينس. "
       nicole: "درست علوم التواصل بين الثقافات. هذا يعني أنها تعرف الكثير عن الثقافات و اللغة. قادرة على اتخاذ قرارات جيدة. هي مديرة لفريق البحث. أغنتها المفضلة هي بالابرا مي آمور ل. شاكا بونك."
       nils: "خبير في الكمبيوتر والمعلومات. هذا يعني أنه يستطيع برمجة الكمبيوتر وصفحات الإنترنت. لديه دائما حل جيد كما انه يتعلم بسرعة. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. أغنيته المفضلة هي يين ل. فييتس بروت."
-      philipp: 
-      sabine: 
+      philipp: "درس التاريخ والسياسة والحقوق. يعرف الكثير عن السياسة والمجتمع. يمكنه فهم الأشياء المعقدة. في كلارات هو عضو بالفريق البحثي. أغنيته المفضلة هي زس إز أور سينس لأستروناوتليس"
+      sabine: "هي أخصائية إجتماعية. هذا يعني أنها تعرف الكثير عن المجتمع. يمكنها فهم الأشياء المعقدة جيداً. في كلارات هي عضوة في الفريق البحثي. وهي توضح لنا قوانين اللجوء الألمانية. أغنيتها المفضلة هي فيزنا لكينو."
       stefan: "خبير ثقافي. هذا يعني أنه يعرف الكثير عن الثقافة والمجتمع. يمكنه إثارة إهتمام الناس لشئ ما ,هو من إبتكر فكرة كلارات. أغنيته المفضلة هي ريدرس اون زا ستورم ل. زا دورس."
       text: "كلارات هو مشروع تابع لمؤسسة بنكيزير الخيرية للمستقبل  (www.benckiser-stiftung.org) .\n نحن ننهض من خلال مؤسسة بنكيزيز منذ عدة سنوات بمشروعات فعالة لدعم الأطفال والشباب. \nوكنا نلاحظ دائما آنه من الصعب معرفة إذا ما كان هناك عروض للدعم. لذلك أصبح من الواضح لدينا:\n إذا كان بالفعل من الصعب علينا كخبراء أن نحصل على فكرة عامة؛ فكيف سيكون الأمر بالنسبة للأطفال والشباب والأسرة الذين يحتاجون بالفعل للمساعدة؟ \nأو بالنسبة للاجئين الذين في الأصل ليس لهم معرفة بإلمانيا بعد؟ \nفكانت الإجابة على هذه الإسئلة هي: صعب جدا! من هنا جاءت الفكرة لتولد كلارات: \n لإيجاد المساعدةبسهولة للأسرة عن طريق كلارات الأسرة وللاجئين عن طريق كلارات اللاجئين."
-      tine: "أخصائية إجتماعية. هي تستمع للناس بشكل جيد. كما أنها مؤلفة. هذا يعني أنها تجيد اللغة وتكتب قصص جميلة. في كلارات هي عضوة في فريق البحث. أعنيتها المفضلة هي سيرفيف إت ل. جوستبويت."
+      tine: "أخصائية إجتماعية. هي تستمع للناس بشكل جيد. كما أنها مؤلفة. هذا يعني أنها تجيد كتابة القصص. في كلارات هي عضوة في فريق البحث ومختصة بلغة كلارات. أغنيتها المفضلة هي سيرفيف إت ل. جوستبويت."
       title: "معلومات عن فريق عمل كلارات"
       verena: "خبيرة سياسية. هذا يعني أنها تعرف الكثير عن السياسة والمجتمع. يمكنها جمع المعلومات بشكل جيد. في كلارات هي عضوة في فريق البحث. كما تقوم بعمل المعجم. أغنيتها المفضلة هي لوز إت ل. أوه وندر."
     agb:
@@ -1124,7 +1124,7 @@ ar:
           title: 
         refugees:
           title: 
-      title: 
+      title: "إختر قسم كلارات الذي يخصك"
     shared:
       address:
         email: |
@@ -1145,7 +1145,7 @@ ar:
     haeufige-fragen: "أسئلة-شائعة"
     home: 
     impressum: "هيئة التحرير"
-    liste: 
+    liste: "القائمة"
     liste-de-services: 
     new: "جديد"
     offers: "عروض"
