--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -466,6 +466,7 @@ ar:
         amh: Amh
         ara: Ara
         aze: Aze
+        bam: Bam
         ban: Ban
         bel: Bel
         ben: Ben
@@ -475,6 +476,7 @@ ar:
         cpe: Cpe
         cze: Cze
         deu: Deu
+        dyu: Dyu
         ell: Ell
         eng: Eng
         ewo: Ewo
@@ -495,6 +497,7 @@ ar:
         lit: Lit
         ltz: Ltz
         luo: Luo
+        man: Man
         mkd: Mkd
         mul: Mul
         nor: Nor
@@ -506,6 +509,7 @@ ar:
         rus: Rus
         skr: Skr
         slo: Slo
+        slv: Slv
         snk: Snk
         som: Som
         spa: Spa
@@ -528,10 +532,6 @@ ar:
         wol: Wol
         zho: Zho
         zza: Zza
-        bam: 
-        dyu: 
-        man: 
-        slv: 
       section:
         family: Family
         refugees: Refugees
@@ -602,12 +602,20 @@ ar:
         approach: "بأي طريقة؟"
         gender: "النوع"
         language: "اللغة"
+        sort: "رتب حسب"
         target_audience: "المساعدة لمن؟"
       option_any: "سواء"
       pagination:
         back: "للخلف"
         gap: "..."
         next: "لاحقا"
+      sort:
+        nearby: "بالقرب"
+        relevance: "أفضل النتائج"
+      tabs:
+        categories: 
+        filter: 
+        map: 
     search_results:
       bridge: "من أجل"
       enclosing: "تم العثور على"
@@ -623,6 +631,7 @@ ar:
       more: "عروض أخرى عن طريق التليفون أو الأنترنت"
       off_canvas:
         result_text: Show %{result_count} results
+      personal_anchor: 
       personal_offers:
         one: "عرض محلي"
         other: "%{count} عروض محلية"
@@ -632,6 +641,7 @@ ar:
         category: 
         category_query: 
         default: 
+      remote_anchor: 
       remote_offers:
         one: " استشارة  هاتفية أو عرض مساعدة عن طريق الإنترنت"
         other: "%{count} استشارات  هاتفية و عروض مساعدة عن طريق الإنترنت"
@@ -655,6 +665,7 @@ ar:
         amh: "لغة أمهرية - አማርኛ"
         ara: " لغة عربية - عربي"
         aze: "لغة أذرية - Azərbaycan"
+        bam: Bambara - Bamanankan
         ban: "لغة بالية - Basa Bali"
         bel: "لغة بيلاروسية - беларуская мова"
         ben: " لغة بنغالية - বাংলা"
@@ -664,6 +675,7 @@ ar:
         cpe: Kamtok - Pidgin
         cze: "لغة تشيكية - čeština"
         deu: "لغة ألمانية - Deutsch"
+        dyu: Jula - Julakan
         ell: "لغة يونانية - ελληνικά"
         eng: "لغة إنجليزية - English"
         ewo: Ewondo - Ewondo
@@ -684,6 +696,7 @@ ar:
         lit: "لغة ليتوانية - lietuvių"
         ltz: "لغة لوكسمبورغية - Lëtzebuergesch"
         luo: "لوو - Dholuo"
+        man: Maninka - Maninka
         mkd: "لغة مقدونية - македонски"
         mul: "لغات أخرى عند الطلب"
         nor: "لغة نرويجية - Norsk"
@@ -695,6 +708,7 @@ ar:
         rus: "لغة روسية - русский"
         skr: "لغة صربية كرواتية - српскохрватски / hrvatskosrpski"
         slo: "لغة سلوفاكية - slovenský jazyk"
+        slv: Slowenisch - Slovenščina
         snk: "لغة سوننكية - Soninkanxaane"
         som: "لغة صومالية - Soomaali"
         spa: "لغة إسبانية - español"
@@ -717,10 +731,6 @@ ar:
         wol: "لغة ولوفية - wɔlɔf"
         zho: "لغة صينية - 普通话 / 普通話"
         zza: "لغة زازاكية - Zazaki / Kırmancki"
-        bam: Bambara - Bamanankan
-        dyu: Jula - Julakan
-        man: Maninka - Maninka
-        slv: Slowenisch - Slovenščina
     single_search_result:
       encounters:
         chat: "دردشة"
@@ -773,7 +783,7 @@ ar:
           سوف نخبرك بكل سرور بمجرد أن يكون في كلارات مساعدات بالقرب منك
           لذلك سجل عنوان بريدك الإليكتروني هنا
       nav_lang:
-        german_content_warning: 
+        german_content_warning: "إختر لغتك"
         languages:
           ar: "عربي"
           de: Deutsch
@@ -801,6 +811,18 @@ ar:
           ru: 
           tr: 
         title: 
+        "#{@current_locale}": 
+        section_link:
+          desktop:
+            family: 
+            refugees: 
+          mobile:
+            home:
+              family: 
+              refugees: 
+            switch:
+              family: 
+              refugees: 
   offers:
     index:
       filters:
@@ -865,7 +887,7 @@ ar:
     show:
       last_update: "آخر إدخال"
       next_steps:
-        code_word: "ما هو سؤالك أو عن ماذا تبحث في الموقع؟"
+        code_word: "هكذا تسمى المساعدة لدى مقدم الدعم."
         heading: "ماذا يجب عليك أن تفعل؟"
       opening_section:
         days:
@@ -879,7 +901,7 @@ ar:
         heading: "متى يمكنك فعل هذا؟"
       speaking: "في أي لغة تقدم لك المساعدة؟"
       website_section:
-        internet_presence: "أين تجد المزيد من المعلومات في النت"
+        internet_presence: "أين تجد المزيد من المعلومات في النت؟"
         websites:
           application_form: "إستمارة التسجيل"
           chat: "الدردشة"
@@ -895,9 +917,9 @@ ar:
           twitter: "تويتر"
           youtube: "اليوتيوب"
       what:
-        code_word: "ما هو سؤالك أو عن ماذا تبحث في الموقع؟ "
+        code_word: "هكذا تسمى المساعدة لدى مقدم الدعم."
         heading: "ما هو الموضوع؟"
-      who: "أين توجد المساعدة؟"
+      who: "أين يمكنك أن تحصل على هذه المساعدة؟"
       who_contact_people:
         dr: ".د"
         email: "البريد الإليكتروني:"
@@ -929,49 +951,49 @@ ar:
       who: "ماذا تفعل المنظمة؟"
   pages:
     about:
-      amina: "أخصائية إجتماعية. هذا يعني أنها تعرف الكثير عن المجتمع. فهي تلاحظ بسرعة ما هو مهم. في كلارات هي تعمل مع فريق البحث وتقرر أي العروض يصلح ليكون ضمن عروض كلارات. أعنيتها المفضلة هي لابريما ايستيت ل. إيرلند أوي."
-      andrea: "درست إدارة متعددة الثقافات. هذه يعني أنها تعرف عن الإقتصاد والثقافة. هي تعمل بدقة شديدة. في كلارات هي عضوة بالفريق البحثي وتتأكد من جودة العمل هنا. أعنيتها المفضلة هي ورك مي ل. بلاك كيس."
-      anja: 
-      anna: 
-      anne: "درست إقتصاد وعلاقات عامة. هي سريعة جدا في التفكير المنطقي. في كلارات هي المديرة. وهي تتابع عمل الفريق بأكمله وتقوم بتنظيم كل شئ. أغنيتها المفضلة هي دنكين زي جروس لدايشكند."
-      astrid: "خبيرة سياسية. هذا يعني أنها تعرف الكثير عن السياسة والمجتمع.  هي دائما مرحة وتعكس هذا على الآخرين. هي عضوة في فريق البحث لدى كلارات. أغنيتها المفضلة هي يو جوت مي ل. زاروتس فييت. إريكا بادو."
+      amina: "أخصائية إجتماعية. هذا يعني أنها تعرف الكثير عن المجتمع. فهي تلاحظ بسرعة ما هو مهم. في كلارات هي تعمل مع فريق البحث وتقرر أي العروض يصلح ليكون ضمن عروض كلارات. أغنيتها المفضلة هي لابريما ايستيت ل. إيرلند أوي."
+      andrea: "درست إدارة متعددة الثقافات. هذه يعني أنها تعرف عن الإقتصاد والثقافة. هي تعمل بدقة شديدة. في كلارات هي عضوة بالفريق البحثي وهي تعتني بالشكل العام لكلارات فاميلي. أغنيتها المفضلة هي ورك مي ل. بلاك كيس."
+      anja: "هي خبيرة إقتصادية ومهندسة. إنها قادرة على التفكير المنطقي السريع. في كلارات هي عضوة بالفريق البحثي. وهي تتأكد من جودة العمل. أغنيتها المفضلة هي وير إز ماي ميند لفرقة بكسييز."
+      anna: "هي متخصصة في علم اللغة. هذا يعني أنها تعرف الكثير عن اللغات المختلفة. وهي على معرفة جيدة بالآداب. يمكنها فهم الأشياء المعقدة جيداً. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي ١٠٠٩ ل.بونبون."
+      anne: "درست إقتصاد وعلاقات عامة. هي سريعة جدا في التفكير المنطقي. في كلارات هي المديرة. وهي تتابع عمل الفريق بأكمله وتقوم بتنظيم كل شئ. أغنيتها المفضلة هي دنكين زي جروس  ل.دايشكند."
+      astrid: "خبيرة سياسية. هذا يعني أنها تعرف الكثير عن السياسة والمجتمع.  هي دائما مرحة وتعكس هذا على الآخرين. هي عضوة في فريق البحث لدى كلارات. أغنيتها المفضلة هي يو جوت مي ل. زاروتس فييت  ل.إريكا بادو."
       basti: "مطور ويب. هذا يعني أنه على معرفة جيدة ببرمجة مواقع وصفحات الإنترنت. في كلارات هو مدير الآي تي أو تكنولوجيا المعلومات. فهو يساعدنا في المشاكل التقنية, كما يقوم بأعمال أخري تتعلق بالإجازات وعقود العمل. أغنيته المفضلة هي مان ان زا ميرور ل. مايكل جاكسون."
       bettina: "بيتينا درست علوم الإدارة غير الربحية. هذه يعني أنها تعرف كيف يتم تنظيم مساعدات. هي بارعة في إنجاز العمل بشكل مرتب. في كلارات هي عضوة في الفريق البحثي؛ فهي تبحث في الإنترنت عن منظمات. أغنيتها المفضلة هي إلياس ل. ديسباتش."
-      birte: "درست علوم تربوية. هي لديها خبرة مع الأطفال. يمكنها أن تتصور نفسها في موقف الآخرين. هي عملت أيضا بوسائل إعلام. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي بردرلاين لمادونا. "
-      chrissy: "هي متخصصة في العلوم السياسية. هذا يعني أنها تعرف الكثير عن السياسة والمجتمع. هي قادرة على التخطيط والتنظيم. في كلارات هي عضوة في الفريق البحثي. وهي تبحث في الإنترنت عن منظمات. أغنيتها المفضلة هي روف هاندي لألكسيسزأونفير."
-      claudia: 
-      eleonore: 
-      elisa: "خبيرة ثقافية. هذا يعني أنها تعرف الكثير عن الثقافات. يمكنها شرح الأمور الصعبة. في كلارات هي عضوة في فريق البحث. هي تقوم أيضا بالعمل في معجم كلارات وتتواصل مع مستخدمي الصفحة. أعنيتها المفضلة هي بوت بيهيند ل. كنجس اوف كونفينينس"
-      esther: 
-      franziska: "خبيرة في القانون الدولي. هذا يعني أنها على دراية جيدة بالقوانين التي تطبق على كل الدول. هي قادرة على فهم الأمور المعقدة جيدا وإيجاد حلول سريعة. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي اكسبلانيشنس ل. سيلاه سوي"
+      birte: "درست علوم تربوية. هي لديها خبرة مع الأطفال. يمكنها أن تتصور نفسها في موقف الآخرين. هي عملت أيضا بوسائل إعلام. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي بردرلاين  ل.مادونا. "
+      chrissy: "هي متخصصة في العلوم السياسية. هذا يعني أنها تعرف الكثير عن السياسة والمجتمع. هي قادرة على التخطيط والتنظيم. في كلارات هي عضوة في الفريق البحثي. وهي تبحث في الإنترنت عن منظمات. أغنيتها المفضلة هي روف هاندي  ل.ألكسيسزأونفير."
+      claudia: "لديها خبرة في العمل بتجارة التجزئة. يمكنها التعامل مع الناس بشكل جيد. وجمع المعلومات بسرعة. في كلارات هي عضوة في فريق البحث. وهي تساعد مستخدمي الصفحة. أغنيتها المفضلة هي شاندليير  ل.سيا."
+      eleonore: "درست الموسيقة والإعلام والإقتصاد. يمكنها جمع المعلومات بسرعة وفهمها. في كلارات هي عضوة في فريق البحث. وهي تعتني بأن يتوصل مستخدمي النت إلى كلارات. أغنيتها المفضلة هي جي فو  ل.زاز. "
+      elisa: "خبيرة ثقافية. هذا يعني أنها تعرف الكثير عن الثقافات. يمكنها شرح الأمور الصعبة. في كلارات هي عضوة في فريق البحث. هي تعتني أيضاً بالنظام في صفحة كلارات في الإنترنت. أغنيتها المفضلة هي بوت بيهيند ل. كنجس اوف كونفينينس."
+      esther: "درست علوم ثقافية. هي تعرف التاريخ والسياسة. وتتعلم بسرعة أشياء جديدة. في كلارات هي عضوة في فريق البحث. وتختص بقاموس كلارات. أغنيتها المفضلة هي زس شارمينج مان ل.سمثيز."
+      franziska: "خبيرة في القانون الدولي. هذا يعني أنها على دراية جيدة بالقوانين التي تطبق على كل الدول. هي قادرة على فهم الأمور المعقدة جيدا وإيجاد حلول سريعة. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي اكسبلانيشنس ل. سيلاه سوي."
       heading: "من وراء كلارات؟"
-      jacinta: 
-      jakob: 
-      janina: "خبيرة في الإنتروبولوجيا الثقافية هذا يعني أنها تعرف الكتير عن الإنسان والثقافات. هي تكتب بشكل جيد. في كلارات هي عضوة في فريق البحث وخبيرة في لغة كلارات الخاصة كما تساعد المستخدمين. أعنيتها المفضلة هي ام اف جي ل. فانتا فور"
+      jacinta: "درست اللغة الألمانية والفرنسية. لغتها الأم هي الإنجليزية. يمكنها الكتابة بشكل جيد وبلغة سهلة. في كلارات هي عضوة في فريق الترجمة وتقوم بترجمة كلارات إلى اللغة الإنجليزية. أغنيتها المفضلة هي وانبي ل.سبيس جيرل."
+      jakob: "هو متخصص في العلوم الأسيوية والأفريقية. هذا يعني أنه يعرف الكثير عن هذه القارات. هو هادئ الطباع حتى إذا كان تحت ضغط. في كلارات هو عضو في الفريق البحثي. ويقوم بالبحث في الإنترنت عن منظمات. أغنيته المفضلة هي سيمبليسيتي."
+      janina: "خبيرة في الإنتروبولوجيا الثقافية هذا يعني أنها تعرف الكتير عن الناس والثقافات. هي تكتب بشكل جيد. في كلارات هي عضوة في فريق البحث وخبيرة في لغة كلارات الخاصة كما تساعد مستخدمي الصفحة. أغنيتها المفضلة هي ام اف جي ل.فانتا فور."
       janne: "ياننا درست سياسة وعلاقات دولية. يمكنها تنظيم وقتها بشكل جيد. في كلارات هي عضوة في فريق البحث وهي تقرر أي العروض يصلح ان يكون من ضمن عروض كلارات. أغنيتها المفضلة هي سويت ل. راي إكس."
       jenny: "هي متخصصة في العلوم الإنسانية الإجتماعية. هذا يعني أنها تعرف الكثير عن الناس والثقافات. هي تجد دائما حلولاً. في كلارات هي عضوة في الفريق البحثي. وهي تعتني بالنظام في صفحتنا على الإنترنت. أغنيتها المفضلة هي آي سنج آي سويم لسيبير."
       jens: "خبير تربوي. هذا يعني أنه على دراية بالتعليم. هو يفهم الأشياء المعقدة بسرعة. في كلارات هو عضو في فريق البحث ويقرر أي العروض يصلح لكلارات. أغنيته المفضلة هي تو بي تو ل. لامبشوب."
       jule: "باحثة في دراسات السلام والصراعات. هذا يعني أنها على دراية بكثير من الصراعات والحروب. هي قادرة على إيجاد حلول. في كلارات هي عضوة في فريق البحث وتتابع بشكل عام كلارات اللاجئين. أغنيتها المفضلة هي هوم لإدوارد شارب."
-      julia: "خبيرة لغة ألمانية. هذا يعني أنها على دراية جيدة باللغة الألمانية وكتابة النصوص. يمكنها الكتابة بشكل جيد وكذلك تفسير الأمور بشكل بسيط. في كلارات هي عضوة في فريق البحث وخبيرة في لغة كلارات الخاصة. أعنيتها المفضلة هي ريكونر ل. راديوهيد. "
+      julia: "خبيرة لغة ألمانية. هذا يعني أنها على دراية جيدة باللغة الألمانية وكتابة النصوص. يمكنها الكتابة بشكل جيد وكذلك تفسير الأمور بشكل بسيط. في كلارات هي عضوة في فريق البحث وخبيرة في لغة كلارات الخاصة. أغنيتها المفضلة هي ريكونر ل. راديوهيد."
       julian: "خبير في الإقتصاد الإجتماعي. هذا يعني أنه يعرف الكثير عن الإقتصاد والمجتمع. هو على دراية جيدة أيضا بالكمبيوتر. في كلارات هو عضو في فريق البحث كما يقوم بأعمال تقنية أخرى. أغنيته المفضلة هي آول يو نيد ل. سابليما."
-      juliane: "درست إدارة أعمال وسياحة. هي قادرة على التخطيط الجيد. وهي تجد دائماً حلولاً مبدعة. في كلارات هي تقوم بالتسويق. أغنيتها المفضلة هي إيسي للكومودورس."
-      karo: "درست علوم أوروبية. هذا يعني أنها تعرف الكثير عن السياسة الأوروبية. هي قادرة على التنظيم الجيد. في كلارات هي عضوة في الفريق البحثي. وتقوم بعمل دليل كلارات. أغنيتها المفضلة هي أليف لبيرل جام."
+      juliane: "درست إدارة أعمال وسياحة. هي قادرة على التخطيط الجيد. وهي تجد دائماً حلولاً مبدعة. في كلارات هي تقوم بالتسويق. أغنيتها المفضلة هي إيسي ل.ذا كومودورس."
+      karo: "درست علوم أوروبية. هذا يعني أنها تعرف الكثير عن السياسة الأوروبية. هي قادرة على التنظيم الجيد. في كلارات هي عضوة في الفريق البحثي. وتقوم بعمل دليل كلارات. أغنيتها المفضلة هي أليف ل.بيرل جام."
       katinka: "أخصائية نفسية. هذا يعني أنها تستطيع أن تفهم السلوك والمشاعر الإنسانية جيدا. في كلارات هي عضوة في الفريق البحثي. وهي تقوم بالبحث لكي تكتشف من يستخدم كلارات. أغنيتها المفضلة هي زا جريتست ل. كات بور."
-      katja: "درست علوم  وأدب اللغة الألمانية. تجيد الألمانية والنصوص الصعبة. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي ميستيريس لبيت جيبونس."
+      katja: "درست علوم  وأدب اللغة الألمانية. تجيد الألمانية والنصوص الصعبة. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي ميستيريس ل.بيت جيبونس."
       konstantin: "مطور ويب. هذا يعني أنه يستطيع بشكل جيد أن يبرمج صفحات إنترنت. هو يجد دائما حلولا جيدة. في كلارات هو عضو في فريق الآي تي أو تكنولوجيا المعلومات ويقوم بعمل صفحات الإنترنت الخاصة بنا. أغنيته المفضلة هي توو لونج ل. دافت بونكت."
-      laura_i: "متخصصة في العلوم الثقافية والسفريات. قادرة على التنظيم الجيد. تعتني بالشكل العام ووتحب أن تتعلم أشياء جديدة. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي برود ماري لإكا وتينا "
+      laura_i: "متخصصة في العلوم الثقافية والسفريات. قادرة على التنظيم الجيد. تعتني بالشكل العام ووتحب أن تتعلم أشياء جديدة. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي برود ماري ل.إكا أوند تينا."
       laura_w: "درست أبحاث التطورات الجغرافية. هذا يعني أنها على دراية جيدة بالدول النامية. لديها دائمة نظرة عامة للأمور. في كلارات هي عضوة في فريق البحث وتعتني بمستخدمي الصفحة. أغنيتها المفضلة هي بينت ات بلاك ل.دينرولينج ستونس."
-      lavinia: "باحثة في دراسات السلام والصراعات. هذا يعني أنها تعرف الكثير عن الصراعات والحروب. يمكنها اقناع الآخرين بأفكار ما. في كلارات هي عضوة في فريق البحث وتقوم بترتيب العروض حسب الموضوع. أغنيتها المفضلة هي آيام نوت دون لفيفر راي."
-      line: "مخرجة مسرحية. وهي أيضا على دراية جيدة بالأدب واللغة. لذلك فهي تعرف كيفية تأثير الكلمات على الناس. في كلارات هي عضوة في فريق البحث وهي مختصة بلغة كلارات. أغنيتها المفضلة هي يونيتد لموسي."
-      lisa: "مصممة إبتكارات. هي تحب التطوير عن طريق حلول أخرى مبدعة. كما يمكنها الرسم جيداً. في كلارات هي عضوة في الفريق البحثي وتتواصل مع مستخدمي الصفحة. وتبحث لتكتشف من يستخدم كلارات. أغنيتها المفضلة هي ريزولوشن لمات."
+      lavinia: "باحثة في دراسات السلام والصراعات. هذا يعني أنها تعرف الكثير عن الصراعات والحروب. يمكنها اقناع الآخرين بأفكار ما. في كلارات هي عضوة في فريق البحث وتقوم بترتيب العروض حسب الموضوع. أغنيتها المفضلة هي آيام نوت دون ل.فيفر راي."
+      line: "مخرجة مسرحية. وهي أيضا على دراية جيدة بالأدب واللغة. لذلك فهي تعرف كيفية تأثير الكلمات على الناس. في كلارات هي عضوة في فريق البحث وهي مختصة بلغة كلارات. أغنيتها المفضلة هي يونيتد ل.موسي."
+      lisa: "مصممة إبتكارات. هي تحب التطوير عن طريق حلول أخرى مبدعة. كما يمكنها الرسم جيداً. في كلارات هي عضوة في الفريق البحثي وتتواصل مع مستخدمي الصفحة. وتبحث لتكتشف من يستخدم كلارات. أغنيتها المفضلة هي ريزولوشن ل.مات."
       marcus: "مصمم ويب. هذا يعني أنه يستطيع برمجة صفحات الإنترنت والشكل العام للصفحة. هو أيضا واضع خطط جيد. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. ويعتني بجعل صفحات الإنترنت الخاصة بنا تبدو في شكل جيد. أغنيته المفضلة هي هيستيريا ل. موسي"
-      michaela: "درست نظم معلومات اقتصادية. يمكنها أن تحمس الناس لشئ ما. وهي تعرف وسائل الإتصال الحديثة جيداً. في كلارات هي عضوة في الفريق البحثي. وتعتني بأن صفحتنا على الإنترنت تعمل بشكل جيد. أغنيتها المفضلة هي ديجيتال لوف لدافت بونك."
+      michaela: "درست نظم معلومات اقتصادية. يمكنها أن تحمس الناس لشئ ما. وهي تعرف وسائل الإتصال الحديثة جيداً. في كلارات هي عضوة في الفريق البحثي. وتعتني بأن صفحتنا على الإنترنت تعمل بشكل جيد. أغنيتها المفضلة هي ديجيتال لوف ل.دافت بونك."
       nahla: "متخصصة في علم الآثار. تعرف الكثير عن تاريخ البشر. يمكنها العمل جيداً وبسرعة. في كلارات هي عضوة بفريق الترجمة وتقوم بترجمة كلارات إلى اللغة العربية. أغنيتها المفضلة هي نسم علينا الهوى لفيروز. "
-      nathalie: "درست حقوق الإنسان وسياسة دولية. قادرة على شرح الأمور جيداً. وهي مستمعة جيدة. في كلارات هي عضوة بالفريق البحثي. أغنيتها المفضلة هي مي إن يو لكونفينينس. "
+      nathalie: "درست حقوق الإنسان وسياسة دولية. قادرة على شرح الأمور جيداً. وهي مستمعة جيدة. في كلارات هي عضوة بالفريق البحثي. أغنيتها المفضلة هي مي إن يو ل.كونفينينس."
       nicole: "درست علوم التواصل بين الثقافات. هذا يعني أنها تعرف الكثير عن الثقافات و اللغة. قادرة على اتخاذ قرارات جيدة. هي مديرة لفريق البحث. أغنتها المفضلة هي بالابرا مي آمور ل. شاكا بونك."
       nils: "خبير في الكمبيوتر والمعلومات. هذا يعني أنه يستطيع برمجة الكمبيوتر وصفحات الإنترنت. لديه دائما حل جيد كما انه يتعلم بسرعة. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. أغنيته المفضلة هي يين ل. فييتس بروت."
       philipp: "درس التاريخ والسياسة والحقوق. يعرف الكثير عن السياسة والمجتمع. يمكنه فهم الأشياء المعقدة. في كلارات هو عضو بالفريق البحثي. أغنيته المفضلة هي زس إز أور سينس لأستروناوتليس"
-      sabine: "هي أخصائية إجتماعية. هذا يعني أنها تعرف الكثير عن المجتمع. يمكنها فهم الأشياء المعقدة جيداً. في كلارات هي عضوة في الفريق البحثي. وهي توضح لنا قوانين اللجوء الألمانية. أغنيتها المفضلة هي فيزنا لكينو."
+      sabine: "هي أخصائية إجتماعية. هذا يعني أنها تعرف الكثير عن المجتمع. يمكنها فهم الأشياء المعقدة جيداً. في كلارات هي عضوة في الفريق البحثي. وهي توضح لنا قوانين اللجوء الألمانية. أغنيتها المفضلة هي فيزنا ل.كينو."
       stefan: "خبير ثقافي. هذا يعني أنه يعرف الكثير عن الثقافة والمجتمع. يمكنه إثارة إهتمام الناس لشئ ما ,هو من إبتكر فكرة كلارات. أغنيته المفضلة هي ريدرس اون زا ستورم ل. زا دورس."
       text: "كلارات هو مشروع تابع لمؤسسة بنكيزير الخيرية للمستقبل  (www.benckiser-stiftung.org) .\n نحن ننهض من خلال مؤسسة بنكيزيز منذ عدة سنوات بمشروعات فعالة لدعم الأطفال والشباب. \nوكنا نلاحظ دائما آنه من الصعب معرفة إذا ما كان هناك عروض للدعم. لذلك أصبح من الواضح لدينا:\n إذا كان بالفعل من الصعب علينا كخبراء أن نحصل على فكرة عامة؛ فكيف سيكون الأمر بالنسبة للأطفال والشباب والأسرة الذين يحتاجون بالفعل للمساعدة؟ \nأو بالنسبة للاجئين الذين في الأصل ليس لهم معرفة بإلمانيا بعد؟ \nفكانت الإجابة على هذه الإسئلة هي: صعب جدا! من هنا جاءت الفكرة لتولد كلارات: \n لإيجاد المساعدةبسهولة للأسرة عن طريق كلارات الأسرة وللاجئين عن طريق كلارات اللاجئين."
       tine: "أخصائية إجتماعية. هي تستمع للناس بشكل جيد. كما أنها مؤلفة. هذا يعني أنها تجيد كتابة القصص. في كلارات هي عضوة في فريق البحث ومختصة بلغة كلارات. أغنيتها المفضلة هي سيرفيف إت ل. جوستبويت."
