--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -525,6 +525,7 @@ en:
         amh: Amh
         ara: Ara
         aze: Aze
+        bam: Bam
         ban: Ban
         bel: Bel
         ben: Ben
@@ -534,6 +535,7 @@ en:
         cpe: Cpe
         cze: Cze
         deu: Deu
+        dyu: Dyu
         ell: Ell
         eng: Eng
         ewo: Ewo
@@ -554,6 +556,7 @@ en:
         lit: Lit
         ltz: Ltz
         luo: Luo
+        man: Man
         mkd: Mkd
         mul: Mul
         nor: Nor
@@ -565,6 +568,7 @@ en:
         rus: Rus
         skr: Skr
         slo: Slo
+        slv: Slv
         snk: Snk
         som: Som
         spa: Spa
@@ -587,10 +591,6 @@ en:
         wol: Wol
         zho: Zho
         zza: Zza
-        bam: 
-        dyu: 
-        man: 
-        slv: 
       section:
         family: Family
         refugees: Refugees
@@ -666,13 +666,20 @@ en:
         approach: By which means?
         gender: Gender
         language: Language
-        target_audience: For whom?
         sort: Sort by
+        target_audience: For whom?
       option_any: any
       pagination:
         back: Previous
         gap: "…"
         next: Next
+      sort:
+        nearby: nearby
+        relevance: 
+      tabs:
+        categories: Categories
+        filter: Filter
+        map: Map
     search_results:
       bridge: for the search term
       enclosing: found
@@ -688,6 +695,7 @@ en:
       more: More remote offers
       off_canvas:
         result_text: Show %{result_count} results
+      personal_anchor: In your area (%{count})
       personal_offers:
         one: One local offer
         other: "%{count} local offers"
@@ -697,6 +705,7 @@ en:
         category: 
         category_query: 
         default: 
+      remote_anchor: 
       remote_offers:
         one: One remote offer
         other: "%{count} remote offers"
@@ -707,7 +716,6 @@ en:
         category_query: 
         default: 
       show_personal: Show local offers
-      personal_anchor: In your area (%{count})
     shared:
       current_and_original_locale:
         "'150'": German Sign Language - Deutsche Gebärdensprache
@@ -721,6 +729,7 @@ en:
         amh: Amharic - አማርኛ
         ara: Arabic - عربي
         aze: Azerbaijani - Azərbaycan
+        bam: Bambara - Bamanankan
         ban: Balinese - Basa Bali
         bel: Belarusian - беларуская мова
         ben: Bengalese - বাংলা
@@ -730,6 +739,7 @@ en:
         cpe: Kamtok - Pidgin
         cze: Czech - čeština
         deu: German - Deutsch
+        dyu: Jula - Julakan
         ell: Greek - ελληνικά
         eng: English
         ewo: Ewondo / Kolo - Ewondo
@@ -750,6 +760,7 @@ en:
         lit: Lithuanian - lietuvių
         ltz: Luxembourgish - Lëtzebuergesch
         luo: Luo - Dholuo
+        man: Maninka - Maninka
         mkd: Macedonian - македонски
         mul: more languages upon request
         nor: Norwegian - Norsk
@@ -761,6 +772,7 @@ en:
         rus: Russian - русский
         skr: Serbo-Croatian - српскохрватски / hrvatskosrpski
         slo: Slovak - slovenský jazyk
+        slv: Slovene - Slovenščina
         snk: Soninke - Soninkanxaane
         som: Somali - Soomaali
         spa: Spanish - español
@@ -783,10 +795,6 @@ en:
         wol: Wolof - wɔlɔf
         zho: Chinese - 普通话 / 普通話
         zza: Zaza - Zazaki / Kırmancki
-        bam: Bambara - Bamanankan
-        dyu: Jula - Julakan
-        man: Maninka - Maninka
-        slv: Slovene - Slovenščina
     single_search_result:
       encounters:
         chat: chat
@@ -863,6 +871,18 @@ en:
           ru: 
           tr: 
         title: 
+        "#{@current_locale}": 
+        section_link:
+          desktop:
+            family: "‹ to clarat refugees"
+            refugees: "‹ to clarat family"
+          mobile:
+            home:
+              family: to the <span class="top-bar__emphasis">clarat family</span> homepage
+              refugees: to the <span class="top-bar__emphasis">clarat refugees</span> homepage
+            switch:
+              family: switch to <span class="top-bar__emphasis">clarat refugees</span>
+              refugees: switch to <span class="top-bar__emphasis">clarat family</span>
   offers:
     index:
       filters:
@@ -924,7 +944,7 @@ en:
     show:
       last_update: Entry last modified on
       next_steps:
-        code_word: What do you have to ask for or look for on the website?
+        code_word: 'This is what the service provider calls this support service:'
         heading: What do you have to do?
       opening_section:
         days:
@@ -954,9 +974,9 @@ en:
           twitter: Twitter
           youtube: Youtube
       what:
-        code_word: What do you have to ask for or look for on the website?
+        code_word: 'This is what the service provider calls this support service:'
         heading: What is this about?
-      who: Who offers this help?
+      who: Where can you get this help?
       who_contact_people:
         dr: Dr.
         email: 'Email: '
@@ -1316,7 +1336,7 @@ en:
     definitions: definitions
     emails: emails
     faq: frequently-asked-questions
-    fr: 
+    fr: fr
     haeufige-fragen: frequently-asked-questions
     home: 
     impressum: impressum
